--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_deploy:
 
 deploy:
   provider: pages
+  local_dir: .
   skip_cleanup: true
   github-token: $GITHUB_PAGES_DEPLOYMENT_TOKEN
   keep-history: true
