--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ deploy:
   provider: pages
   skip_cleanup: true
   github-token: $GITHUB_PAGES_DEPLOYMENT_TOKEN
-  keep-history: true
+  keep-history: false
   on:
     branch: master
   target-branch: gh-pages
