--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,12 @@ install:
 cache: pip
 
 script:
-  - cd test && python test.py https://comfreek.github.io/mmt-pygments-lexer/test/ && cd ..
+  - cd mmtpygments/test && python test.py https://comfreek.github.io/mmt-pygments-lexer/test/ && cd ..
 
 before_deploy:
   # So that our render results, which are ignored by this very .gitignore, are actually published
   # to gh-pages.
-  - rm test/.gitignore
+  - rm mmtpygments/test/.gitignore
 
 deploy:
   provider: pages
