Switch to pipenv in readme and Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,12 @@ python:
   - "3.7"
 
 install:
-  - pip install Pygments
+  - pip install pipenv
+  - pipenv install
 cache: pip
 
 script:
-  - pushd mmtpygments/test && python test.py https://comfreek.github.io/mmtpygments/mmtpygments/test/ && popd
+  - pushd mmtpygments/test && pipenv run python test.py https://comfreek.github.io/mmtpygments/mmtpygments/test/ && popd
 
 before_deploy:
   # Prevent auxiliary and other compilation artifacts from the MMT Git submodule archives to be pushed to gh-pages
