--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ branches:
     - master
     - /^greenkeeper/.*$/
 
+os: linux
 dist: xenial
 language: python
 python:
@@ -26,12 +27,10 @@ before_deploy:
 
 deploy:
   - provider: pages
-    skip_cleanup: true
-    github-token: $GITHUB_PAGES_DEPLOYMENT_TOKEN
-    keep-history: false
+    github_token: $GITHUB_PAGES_DEPLOYMENT_TOKEN
     on:
       branch: master
-    target-branch: gh-pages
+    target_branch: gh-pages
 
   - provider: pypi
     # Deploy to PyPI from tagged commits on master branch
