--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 branches:
   only:
     - master
+    # In tagged commits, the branch name is set to the tag name
+    # And below we deploy upon tagged commits to PyPI
+    - /v\d+.*/
     - /^greenkeeper/.*$/
 
 os: linux
@@ -33,11 +36,14 @@ deploy:
     target_branch: gh-pages
 
   - provider: pypi
-    # Deploy to PyPI from tagged commits 
-    # See https://docs.travis-ci.com/user/deployment/pypi/,
+    # Deploy to PyPI from tagged commits on either master branch or version tags
+    # (in the latter case the branch name from Travis CI's POV is the tag name then!)
+    # See https://docs.travis-ci.com/user/deployment/pypi/ and
     # https://stackoverflow.com/questions/30156581/travis-ci-skipping-deployment-although-commit-is-tagged
     on:
-      all_branches: true
+      only:
+        - master
+        - /v\d+.*/
       tags: true
       skip_existing: true
     user: "__token__"
