--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ deploy:
     token: $GITHUB_PAGES_DEPLOYMENT_TOKEN
     on:
       branch: master
+    skip_cleanup: true # will soon be deprecated by Travis CI in favor of `cleanup: false` (being the default)
     target_branch: gh-pages
 
   - provider: pypi
