--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_deploy:
   - find mmtpygments/test/data -type f ! -name '*.mmt.html' -delete
 
   # This .gitignore ignores the very .mmt.html output files, hence delete it before deployment to gh-pages
-  - rm mmtpygments/test/.gitignore
+  - rm -f mmtpygments/test/.gitignore
 
 deploy:
   - provider: pages
