--- a/.travis.yml
+++ b/.travis.yml
@@ -38,16 +38,17 @@ deploy:
     target_branch: gh-pages
 
   - provider: pypi
-    # Deploy to PyPI from tagged commits on either master branch or version tags
+    # Deploy to PyPI from commits on either master branch or version tags
     # (in the latter case the branch name from Travis CI's POV is the tag name then!)
     # See https://docs.travis-ci.com/user/deployment/pypi/ and
     # https://stackoverflow.com/questions/30156581/travis-ci-skipping-deployment-although-commit-is-tagged
 
     on:
       branch:
-        - master
-        - /v\d+.*/
-    tags: true
+        only:
+          - master
+          - /v\d+.*/
+    tags: false # also deploy from non-tagged commits
     # keep_history: true, only exists in upcoming dlp2 on Travis CI
     skip_cleanup: true # will soon be deprecated by Travis CI in favor of `cleanup: false` (being the default)
     skip_existing: true
