--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,8 @@
 	path = mmtpygments/test/data/MathHub/Almanac/context-graph
 	url = https://gl.mathhub.info/Almanac/context-graph.git
 	ignore = untracked
+[submodule "mmtpygments/test/data/MathHub/MMT/LATIN2"]
+	path = mmtpygments/test/data/MathHub/MMT/LATIN2
+	url = https://gl.mathhub.info/MMT/LATIN2.git
+	ignore = untracked
+	branch = devel
